Generator modified to use adapter pattern for sequence